final version of the broadway pacman, a title, instruction and a score is added, when user eats all of the block, the victory massage would be shown to the user and the game would be finished

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
   </head>
 
   <body>
+    <div class="title">
+      <span class="broadway">BROADWAY</span>
+      <span class="pacman">PACMAN</span>
+    </div>
     <script src="sketch.js"></script>
+    
+    <div class="instructions">
+      Use the arrow keys to control Pacman and eat all the blocks!
+    </div>
   </body>
 </html>
